# ThingsMCP

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
scripts/: detect_history_key.py
systemd/: things-mcp.service
tests/: test_cloud_client.py  test_detect_history_key.py  test_history.py  test_mutations.py  test_server.py  test_service.py  test_store.py
things_mcp/: __init__.py  cloud_client.py  history.py  mutations.py  server.py  service.py  store.py
