[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "things-mcp"
version = "0.1.0"
description = "Personal, unofficial MCP server for Things Cloud."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp[cli]>=1.22.0",
  "starlette>=0.37.0",
  "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0.0",
]

[project.scripts]
things-mcp = "things_mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
